Сделал секцию "Команда"

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,7 +37,9 @@
         "css/blocks/advantages.scss",
         "css/blocks/reviews.scss",
         "css/blocks/review-snippet.scss",
-        "css/blocks/fixed-menu.scss"
+        "css/blocks/fixed-menu.scss",
+        "css/blocks/team.scss",
+        "css/blocks/accordeon.scss"
       ]
     },
     {
