hero space-beween,  поменял место team, начал меню

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,7 +39,8 @@
         "css/blocks/review-snippet.scss",
         "css/blocks/fixed-menu.scss",
         "css/blocks/team.scss",
-        "css/blocks/accordeon.scss"
+        "css/blocks/accordeon.scss",
+        "css/blocks/menu.scss"
       ]
     },
     {
