--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,7 +40,8 @@
         "css/blocks/fixed-menu.scss",
         "css/blocks/team.scss",
         "css/blocks/accordeon.scss",
-        "css/blocks/menu.scss"
+        "css/blocks/menu.scss",
+        "css/blocks/accordeon-menu.scss"
       ]
     },
     {
