Доделал секцию меню, начал секцию контактов

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,7 +41,10 @@
         "css/blocks/team.scss",
         "css/blocks/accordeon.scss",
         "css/blocks/menu.scss",
-        "css/blocks/accordeon-menu.scss"
+        "css/blocks/accordeon-menu.scss",
+        "css/blocks/contacts.scss",
+        "css/blocks/map.scss",
+        "css/blocks/footer.scss"
       ]
     },
     {
