Доделал контакты, начал секцию "заказать"

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,6 +37,7 @@
         "css/blocks/advantages.scss",
         "css/blocks/reviews.scss",
         "css/blocks/review-snippet.scss",
+        "css/blocks/order.scss",
         "css/blocks/fixed-menu.scss",
         "css/blocks/team.scss",
         "css/blocks/accordeon.scss",
@@ -44,7 +45,8 @@
         "css/blocks/accordeon-menu.scss",
         "css/blocks/contacts.scss",
         "css/blocks/map.scss",
-        "css/blocks/footer.scss"
+        "css/blocks/footer.scss",
+        "css/blocks/social.scss"
       ]
     },
     {
