сделал форму кроме кнопок и чекбокса

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,6 +38,7 @@
         "css/blocks/reviews.scss",
         "css/blocks/review-snippet.scss",
         "css/blocks/order.scss",
+        "css/blocks/form.scss",
         "css/blocks/fixed-menu.scss",
         "css/blocks/team.scss",
         "css/blocks/accordeon.scss",
