Поменял единицы измерения, начал адаптив hero

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,6 +24,7 @@
       "path": "css/main.scss",
       "imports": [
         "css/misc/normalize.scss",
+        "css/misc/media.scss",
         "css/misc/mixins.scss",
         "css/misc/fonts.scss",
         "css/misc/layout.scss",
