Сверстал полноэкранное меню, начал его js

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,6 +32,7 @@
         "css/blocks/phone-num.scss",
         "css/blocks/logo.scss",
         "css/blocks/nav.scss",
+        "css/blocks/fullscreen-nav.scss",
         "css/blocks/hero.scss",
         "css/blocks/btn.scss",
         "css/blocks/why.scss",
