Большая часть десктопного слайдера

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,6 +37,7 @@
         "css/blocks/btn.scss",
         "css/blocks/why.scss",
         "css/blocks/advantages.scss",
+        "css/blocks/slider.scss",
         "css/blocks/reviews.scss",
         "css/blocks/review-snippet.scss",
         "css/blocks/order.scss",
