Сделал JS аккордеона секции "команда"

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -28,6 +28,7 @@
         "css/misc/mixins.scss",
         "css/misc/fonts.scss",
         "css/misc/layout.scss",
+        "css/misc/animations.scss",
         "css/blocks/header.scss",
         "css/blocks/phone-num.scss",
         "css/blocks/logo.scss",
