--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,8 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "css"
+      "css",
+      "psd"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -74,7 +75,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "settings"
   },
   "fileWatcher": {
     "enabled": true,
